@@ -4,7 +4,6 @@ In descending order of importance:
 * patch functionality
 * better save feedback
 * session management
-* text view should work when comparing (make a temp file with current diff settings)
 * merge text view GUI
 * the tree view should show directory structure
 * add support for incremental patch saving (i'll explain if anyone wants to know)
