@@ -1,3 +1,8 @@
+july   13, 2001 : John Firebaugh
+	Text view now works in compare mode.
+	Fix clicking difference to select it.
+	Don't scroll to difference when clicking to select it.
+	Give the diff view a nice frame.
 july   12, 2001 : Otto Bruggeman
 	Stats work now, maybe they need more info but i dont know what yet.
 	Will think some more about it.
